--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,15 +26,12 @@ jobs:
         go get github.com/axw/gocov/gocov
         go get github.com/AlekSi/gocov-xml
         gocov test | gocov-xml > coverage.xml
-    - name: Install Zeus
-      run: |
-        yarn global add @zeus-ci/cli
-        echo "::add-path::$(yarn global bin)"
     - name: Upload to Zeus
       env:
         ZEUS_API_TOKEN: ${{ secrets.ZEUS_API_TOKEN }}
         ZEUS_HOOK_BASE: ${{ secrets.ZEUS_HOOK_BASE }}
       run: |
-        zeus job update -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -r $GITHUB_SHA
-        zeus upload -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -t "application/x-cobertura+xml" coverage.xml
-        zeus job update --status=passed -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -r $GITHUB_SHA
+        npm install -g @zeus-ci/cli
+        npx zeus job update -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -r $GITHUB_SHA
+        npx zeus upload -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -t "application/x-cobertura+xml" coverage.xml
+        npx zeus job update --status=passed -b $GITHUB_RUN_ID -j $GITHUB_RUN_NUMBER -r $GITHUB_SHA
